# gass-dependencies

./: ProjectHome.md  linux-build.txt  win-build-all.bat  win-build-core.bat  win-build.bat
Hydrax-v0.5.1/: CMakeLists.txt
Hydrax-v0.5.1/src/Hydrax/: CfgFileManager.cpp  CfgFileManager.h  DecalsManager.h  Enums.h  GPUNormalMapManager.h  GodRaysManager.h  Help.h  Hydrax.cpp  Hydrax.h  Image.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  Prerequisites.h  RttManager.cpp  RttManager.h  TextureManager.h
Hydrax-v0.5.1/src/Hydrax/Modules/: Module.h
Hydrax-v0.5.1/src/Hydrax/Modules/ProjectedGrid/: ProjectedGrid.h
Hydrax-v0.5.1/src/Hydrax/Modules/RadialGrid/: RadialGrid.h
Hydrax-v0.5.1/src/Hydrax/Modules/SimpleGrid/: SimpleGrid.cpp  SimpleGrid.h
Hydrax-v0.5.1/src/Hydrax/Noise/: Noise.h
Hydrax-v0.5.1/src/Hydrax/Noise/FFT/: FFT.h
Hydrax-v0.5.1/src/Hydrax/Noise/Perlin/: Perlin.h
MyGUI_3.2.0/: CMakeLists.txt
MyGUI_3.2.0/CMake/Utils/: MyGUIConfigTargets.cmake
MyGUI_3.2.0/Common/: CMakeLists.txt
MyGUI_3.2.0/Common/FileSystemInfo/: FileSystemInfo.h
MyGUI_3.2.0/Common/Input/Win32/: InputManager.cpp  PointerManager.cpp
MyGUI_3.2.0/MyGUIEngine/include/: MyGUI_RenderFormat.h
ODE/: CMakeLists.txt
PagedGeometry-1.1.1/: CMakeLists.txt  GASSNotes.txt
PagedGeometry-1.1.1/include/: PagedGeometry.h  PagedGeometryConfig.h  StaticBillboardSet.h
PagedGeometry-1.1.1/source/: BatchPage.cpp  BatchedGeometry.cpp  GrassLoader.cpp  ImpostorPage.cpp  PagedGeometry.cpp  PropertyMaps.cpp  StaticBillboardSet.cpp  TreeLoader2D.cpp  TreeLoader3D.cpp
RakNet/: CMakeLists.txt  RakNet.cbp  RakNet.dev  RakNet.sln  RakNet.vcproj  RakNet.vcxproj  RakNet.vcxproj.filters  configure.ac  premake.lua  premake4.lua
RakNet/DependentExtensions/: AutopatcherClient.cpp  AutopatcherClient.h  RakVoice.cpp  RakVoice.h
RakNet/DependentExtensions/AutopatcherMySQLRepository/Debug/: vc80.ib_pdb_index
RakNet/DependentExtensions/AutopatcherMySQLRepository/Release/: vc80.ib_pdb_index
RakNet/DependentExtensions/AutopatcherPostgreRepository/: AutopatcherPostgreRepository.cpp  AutopatcherPostgreRepository_vc8.vcproj
RakNet/DependentExtensions/AutopatcherPostgreRepository/Debug/: vc80.ib_pdb_index  vc80.idb
RakNet/DependentExtensions/AutopatcherPostgreRepository/Release/: vc80.ib_pdb_index  vc80.idb
RakNet/DependentExtensions/Lobby/LobbyDB_PostgreRepository/: LobbyDB_PostgreSQL_vc8.vcproj
RakNet/DependentExtensions/Lobby/RankingServerDB_PostgreRepository/: RankingServerDB_PostgreSQL_vc8.vcproj
RakNet/Help/: autorpc.html  index.html  networkidobject.html  revisionlog.html
RakNet/Samples/AutoRPC/: AutoRPCSample.cpp
RakNet/Samples/AutopatcherClient/: AutopatcherClientTest.cpp
RakNet/Samples/AutopatcherServer/: AutopatcherServer_vc8.vcproj
RakNet/Samples/BitStream/: BitStreamSample.cpp
RakNet/Samples/DirectoryDeltaTransfer/: DirectoryDeltaTransferTest.cpp
RakNet/Samples/LobbyClientTest/: LobbyClientTest.cpp
RakNet/Samples/LobbyDB_PostgreSQL/: LobbyDB_PostgreSQLTest_vc8.vcproj
RakNet/Samples/LobbyServerTest/: LobbyServerTest.cpp  LobbyServerTest_vc8.vcproj
RakNet/Samples/PHPDirectoryServer/: DirectoryServer.php  PHPDirectoryServer.cpp
RakNet/Samples/RankingServerDB/: RankingServerDBTest_vc8.vcproj
RakNet/Samples/RankingServerDBTest/: RankingServerDBTest_vc8.vcproj
RakNet/Samples/ReadyEvent/: ReadyEventSample.cpp
RakNet/Samples/Reliable Ordered Test/: ReliableOrderedTest.cpp
RakNet/Samples/ReplicaManager2/: ReplicaManager2.vcproj  TestObjects.cpp  TestObjects.h  main.cpp
RakNet/Samples/Timestamping/: Timestamping.cpp  Timestamping_vc8.vcproj
RakNet/Samples/TitleValidationDB_PostgreSQL/: TitleValidationDB_PostgreSQLTest_vc8.vcproj
RakNet/Scripts/: create_codeblocks.sh  create_vc2005.bat  premake.lua  premake4.lua  raknet.cbp  raknet.lua  raknet.workspace  raknet4.lua
RakNet/Source/: AutoRPC.cpp  AutoRPC.h  BitStream.cpp  BitStream.h  ConnectionGraph.cpp  DS_MemoryPool.h  DirectoryDeltaTransfer.cpp  FileList.cpp  FileList.h  FileListTransfer.cpp  FileListTransferCBInterface.h  FileOperations.cpp  FormatString.h  FullyConnectedMesh.h  FunctionThread.h  Gen_RPC8.cpp  Gen_RPC8.h  HTTPConnection.cpp  HTTPConnection.h  InlineFunctor.cpp  InlineFunctor.h  InternalPacket.h  Kbhit.h  MessageIdentifiers.h  NatPunchthrough.cpp  NatPunchthrough.h  NetworkIDManager.cpp  NetworkIDManager.h  NetworkIDObject.cpp  PacketLogger.cpp  RakNetStatistics.cpp  RakNetStatistics.h  RakNetTypes.cpp  RakNetTypes.h  RakNetVersion.h  RakPeer.cpp  RakPeer.h  RakPeerInterface.h  RakSleep.cpp  RakString.cpp  (+12 more)
SkyX-v0.4/: CMakeLists.txt  License.txt  Readme.txt
SkyX-v0.4/CMake/: SkyXDependencies.cmake
SkyX-v0.4/SkyX/Source/: MeshManager.cpp  SkyX.cpp
SkyX-v0.4/SkyX/Source/VClouds/: VClouds.cpp
SkyX-v0.4/SkyXDemo1/Source/: main.cpp
SkyX-v0.4/SkyXDemo2/Source/: main.cpp
SkyX-v0.4/SkyXDemo3/Source/: main.cpp
angelscript_2.28.0/angelscript/include/: angelscript.h
angelscript_2.28.0/angelscript/source/: as_builder.cpp  as_compiler.cpp  as_scriptobject.cpp
angelscript_2.28.0/docs/articles/: changes2.html
qtpropertybrowser-2.5_1/: qtpropertybrowser.sln
qtpropertybrowser-2.5_1/buildlib/: QtSolutions_PropertyBrowser-2.5.vcxproj  QtSolutions_PropertyBrowser-2.5.vcxproj.filters
qtpropertybrowser-2.5_1/src/: CustomTypes.cpp  CustomTypes.h  fileedit.cpp  fileedit.h  qteditorfactory.cpp  qteditorfactory.h  variantfactory.cpp  variantfactory.h  variantmanager.cpp  variantmanager.h
qtpropertybrowser/src/: CMakeLists.txt
recast/: CMakeLists.txt
recast/Detour/: CMakeLists.txt
recast/Detour/Include/: DetourNode.h
recast/DetourCrowd/: CMakeLists.txt
recast/DetourTileCache/: CMakeLists.txt
recast/Recast/: CMakeLists.txt
recast/Utils/: CMakeLists.txt
recast/Utils/Include/: TiledNavigationMeshBuilder.h  TiledNavigationMeshSerializer.h
recast/Utils/Source/: TiledNavigationMeshBuilder.cpp  TiledNavigationMeshSerializer.cpp
tinyxml/: CMakeLists.txt  tinystr.h  tinyxml.h
tinyxml2/: CMakeLists.txt  Makefile  tinyxml2-debug.pc.in  tinyxml2.cpp  tinyxml2.h
(+6 files in other folders)
